--- a/scss/elements/_wysiwyg.scss
+++ b/scss/elements/_wysiwyg.scss
@@ -37,7 +37,7 @@ img {
   }
 }
 
-.quickedit-field.quickedit-highlighted {
+.quickedit-field {
   top: 0 !important;
   left: 0 !important;
   padding: 0 !important;
